--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/jpeg/webdevimg.jpeg"
+              alt="My Web Dev Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Orlando Dominici</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,13 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Greetings, My Name Is Orlando Dominici</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            I am a frontend Developer with experience in developing web
+            applications and software solutions in diverse technology
+            environments. I am skilled in HTML, CSS, JavaScript, React, and
+            Python.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -98,7 +99,11 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://www.linkedin.com/in/orlando-dominici-83078082/"
+            class="home-hero__social-icon-link"
+            target="_blank"
+          >
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -107,7 +112,11 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://github.com/jox51/jox51/"
+            class="home-hero__social-icon-link"
+            target="_blank"
+          >
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,7 +125,11 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://twitter.com/DomPeel82"
+            class="home-hero__social-icon-link"
+            target="_blank"
+          >
             <img
               src="./assets/png/twitter-ico.png"
               alt="icon"
@@ -124,7 +137,7 @@
             />
           </a>
         </div>
-        <div class="home-hero__social">
+        <!-- <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
               src="./assets/png/yt-ico.png"
@@ -144,7 +157,7 @@
               class="home-hero__social-icon"
             />
           </a>
-        </div>
+        </div> -->
       </div>
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
@@ -155,8 +168,10 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            I am a Frontend Developer who is looking to build robust and
+            innovative web apps. Currently doing freelance work while seeking a
+            permanent web developer position. Recently retired U.S. Navy Veteran
+            with over 21 years of service.
           </span>
         </h2>
         <div class="about__content">
@@ -165,13 +180,13 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
+                <strong>Orlando Dominici</strong>
                 and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
+                Pembroke Pines, FL. I've done
+                <strong> React </strong>
+                projects for private companies, managed diverse set of employs,
+                and collaborated with talented people to create
+                <strong>wide variety of solution </strong>
                 for both business and consumer use.
               </p>
               <p class="about__content-details-para">
@@ -192,14 +207,14 @@
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">Tailwind</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">Shopify</div>
               <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">React Redux</div>
+              <div class="skills__skill">React Router</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Strapi</div>
             </div>
           </div>
         </div>
@@ -209,28 +224,25 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
-          <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span>
+          <span class="heading-sec__sub"> Below are some of my projects. </span>
         </h2>
 
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/project_1.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Enlightened Picks</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Web app built with HTML, CSS, Javascript. Utilized React with
+                Redux, Router, Tailwind, and Auth0 connected to Strapi for
+                database management.
               </p>
               <a
                 href="./project-1.html"
@@ -240,7 +252,8 @@
               >
             </div>
           </div>
-          <div class="projects__row">
+          <!-- Project 2  -->
+          <!-- <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
@@ -263,8 +276,10 @@
                 >Case Study</a
               >
             </div>
-          </div>
-          <div class="projects__row">
+          </div> -->
+          <!-- End of Project Two -->
+          <!-- Project 3 -->
+          <!-- <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
@@ -287,7 +302,8 @@
                 >Case Study</a
               >
             </div>
-          </div>
+          </div> -->
+          <!-- End of Project 3 -->
         </div>
       </div>
     </section>
@@ -296,12 +312,15 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Please contact me on here if you have any questions. Thank you.
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form
+            action="https://formspree.io/f/xyyawnyb"
+            class="contact__form"
+            method="POST"
+          >
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -351,28 +370,40 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.linkedin.com/in/orlando-dominici-83078082/"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://github.com/jox51/jox51/"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://twitter.com/DomPeel82"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
@@ -385,21 +416,18 @@
                   src="./assets/png/insta-ico.png"
                   alt="icon"
                 />
-              </a>
+              </a> -->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
-            <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
-            </p>
+            <h4 class="heading heading-sm text-lt">Orlando Dominici</h4>
+            <p class="main-footer__short-desc">Frontend Developer</p>
           </div>
         </div>
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
+          &copy; Copyright 2023. Made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
