made some visual edits

--- a/index.html
+++ b/index.html
@@ -240,9 +240,11 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Enlightened Picks</h3>
               <p class="projects__row-content-desc">
-                Web app built with HTML, CSS, Javascript. Utilized React with
-                Redux, Router, Tailwind, and Auth0 connected to Strapi for
-                database management.
+                Fullstack (JAMStack) React Application built with HTML, CSS,
+                Javascript. Utilized React with Redux, Router, Tailwind, and
+                Auth0 connected to Strapi for database management. Paypal
+                payment information implemented and Role Based Access Control
+                handled via Auth0 on the backend.
               </p>
               <a
                 href="./project-1.html"
