--- a/project-1.html
+++ b/project-1.html
@@ -22,8 +22,8 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/jpeg/webdevimg.jpeg"
+              alt="my headshot image"
               class="header__logo-img"
             />
           </div>
@@ -88,9 +88,12 @@
         <div class="project-cs-hero__info">
           <p class="text-primary">
             This project is a sports picking website built with HTML, CSS,
-            JavaScript, and React. The site retrieves data from an API that is
-            then filtered based on specific criteria. The picks can then be
-            filtered and edited as seen fit and then sent to subscibers.
+            JavaScript, and React. The site retrieves data from the Odds API
+            that is then filtered based on specific criteria. The picks can then
+            be filtered and edited as seen fit and then sent to subscribers.
+            Authentication is done through Auth0 and payment is handled via
+            Paypal. Role Based Access Control (RBAC) is handled on the backend
+            through Auth0.
           </p>
         </div>
         <div class="project-cs-hero__cta">
