fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -184,16 +184,10 @@
                 and I'm a <strong> Frontend Web Developer </strong> located in
                 Pembroke Pines, FL. I've done
                 <strong> React </strong>
-                projects for private companies, managed diverse set of employs,
-                and collaborated with talented people to create
+                projects for private companies, managed diverse set of
+                employees, and collaborated with talented people to create
                 <strong>wide variety of solution </strong>
                 for both business and consumer use.
-              </p>
-              <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
